refactor: remove unused APIs and unnecessary codes in the server side
