# src/main/kotlin/jp/ac/titech/cs/se/refactorhub/app/infrastructure/router/api/Commits.kt
@@ -12,10 +12,6 @@ import org.koin.core.component.KoinApiExtension
 import org.koin.ktor.ext.inject
 
 @KtorExperimentalLocationsAPI
-@Location("/{owner}/{repository}/{sha}")
-data class GetCommit(val owner: String, val repository: String, val sha: String)
-
-@KtorExperimentalLocationsAPI
 @Location("/{owner}/{repository}/{sha}/detail")
 data class GetCommitDetail(val owner: String, val repository: String, val sha: String)
 
@@ -24,9 +20,6 @@ data class GetCommitDetail(val owner: String, val repository: String, val sha: S
 fun Route.commits() {
     route("/commits") {
         val commitController: CommitController by inject()
-        get<GetCommit> {
-            call.respond(commitController.get(it.owner, it.repository, it.sha))
-        }
         get<GetCommitDetail> {
             call.respond(commitController.getDetail(it.owner, it.repository, it.sha))
         }
