# src/main/kotlin/jp/ac/titech/cs/se/refactorhub/app/infrastructure/router/api/Users.kt
@@ -1,9 +1,7 @@
 package jp.ac.titech.cs.se.refactorhub.app.infrastructure.router.api
 
 import io.ktor.application.call
-import io.ktor.locations.KtorExperimentalLocationsAPI
-import io.ktor.locations.Location
-import io.ktor.locations.get
+import io.ktor.locations.*
 import io.ktor.response.respond
 import io.ktor.routing.Route
 import io.ktor.routing.route
@@ -13,10 +11,6 @@ import jp.ac.titech.cs.se.refactorhub.app.infrastructure.auth.Session
 import jp.ac.titech.cs.se.refactorhub.app.interfaces.controller.UserController
 import org.koin.core.component.KoinApiExtension
 import org.koin.ktor.ext.inject
-
-@KtorExperimentalLocationsAPI
-@Location("/{id}")
-data class GetUser(val id: Int)
 
 @KtorExperimentalLocationsAPI
 @Location("/{id}/drafts")
@@ -36,9 +30,6 @@ fun Route.users() {
     route("/users") {
         val userController: UserController by inject()
 
-        get<GetUser> {
-            call.respond(userController.get(it.id))
-        }
         get<GetUserDrafts> {
             call.respond(userController.getDrafts(it.id))
         }
