# src/main/kotlin/jp/ac/titech/cs/se/refactorhub/app/interfaces/controller/RefactoringController.kt
@@ -1,7 +1,5 @@
 package jp.ac.titech.cs.se.refactorhub.app.interfaces.controller
 
-import jp.ac.titech.cs.se.refactorhub.app.model.CreateRefactoringBody
-import jp.ac.titech.cs.se.refactorhub.app.model.Refactoring
 import jp.ac.titech.cs.se.refactorhub.app.model.RefactoringDraft
 import jp.ac.titech.cs.se.refactorhub.app.usecase.service.RefactoringService
 import org.koin.core.component.KoinApiExtension
@@ -11,26 +9,6 @@ import org.koin.core.component.inject
 @KoinApiExtension
 class RefactoringController : KoinComponent {
     private val refactoringService: RefactoringService by inject()
-
-    fun create(body: CreateRefactoringBody, userId: Int?): Refactoring {
-        return refactoringService.create(body.commit, body.type, body.data, body.description, userId)
-    }
-
-    fun getAll(): List<Refactoring> {
-        return refactoringService.getAll()
-    }
-
-    fun get(id: Int): Refactoring {
-        return refactoringService.get(id)
-    }
-
-    fun getChildren(id: Int): List<Refactoring> {
-        return refactoringService.getChildren(id)
-    }
-
-    fun getDrafts(id: Int): List<RefactoringDraft> {
-        return refactoringService.getDrafts(id)
-    }
 
     fun fork(id: Int, userId: Int?): RefactoringDraft {
         return refactoringService.fork(id, userId)
