# src/main/kotlin/jp/ac/titech/cs/se/refactorhub/app/interfaces/controller/RefactoringTypeController.kt
@@ -26,8 +26,4 @@ class RefactoringTypeController : KoinComponent {
     fun getAll(): List<RefactoringType> {
         return refactoringTypeService.getAll()
     }
-
-    fun get(name: String): RefactoringType {
-        return refactoringTypeService.getByName(name)
-    }
 }
